Finish task1 and 2(pay attention to task2)

--- a/flex/01-flex-center/style.css
+++ b/flex/01-flex-center/style.css
@@ -1,8 +1,23 @@
+/* # CENTER THIS DIV
+This one is simple, but it's something that you'll want to do ALL THE TIME.  Might as well get it out of the way now.
+
+All you need to do is center the red div inside the blue container.
+
+## Desired Outcome
+![outcome](./desired-outcome.png)
+
+### Self Check
+- Is the red div centered?
+- Did you _only_ use flexbox to center it? */
 .container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: dodgerblue;
   border: 4px solid midnightblue;
   width: 400px;
   height: 300px;
+
 }
 
 .box {
@@ -12,4 +27,6 @@
   border: 6px solid maroon;
   width: 80px;
   height: 80px;
+
+  
 }
