--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,35 @@
+/* # A Basic Header
+
+Use flexbox rules to create this very common webpage header style. The benefit to using flex here is that everything should be _flexible_. Check out the two screenshots below to get an idea of how it should scale with your screen. Besides flex rules, you'll also want to add some rules for margin and padding. (Hint: `ul`s have some default margin/padding that you will need to deal with.)
+
+## Desired Outcome
+
+narrow:
+![narrow](./desired-outcome-narrow.png)
+
+wide: 
+![wide](./desired-outcome-wide.png)
+
+### Self Check
+- There is space between all items and the edge of the header (specific px amount doesn't matter here).
+- Logo is centered vertically and horizontally.
+- list-items are horizontal, and are centered vertically inside the header.
+- left-links and right-links are pushed all the way to the left and right, and stay at the edge of the header when the page is resized.
+- Your solution does not use floats, inline-block, or absolute positioning.
+
+- Note: For this exercise, it's completely acceptable to not match the font-family. */
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-direction: row;
+  padding:8px;/*I miss it */
+  align-items: center; 
+   /*line 27 I use "align-self:center" in .logo
+   but can't solve "list-items are horizontal, and are centered vertically inside the header." so controlling them in flex container is more reasonable*/
+ justify-content: space-between;
+   /* I use margin:auto in .logo instead
+   same problem above */
 }
 
 .logo {
@@ -9,11 +38,18 @@
   color: tomato;
   background: white;
   padding: 4px 32px;
+  margin: auto;
+  align-self: center;
 }
 
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  margin:0px;
+  padding:0px;
+  gap: 10px;
+
 }
 
 a {
@@ -22,4 +58,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+
 }
