--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -1,3 +1,25 @@
+/* # Another common header style
+
+We're starting to sneak in a little more CSS that you haven't seen yet. Don't worry about this for now; we just want things to look a little bit prettier, and this CSS will not interfere with your task.
+
+For this one you will probably need to edit the HTML a little bit. Often with flexbox you need to add containers around things to make them go where you need them to go. In this case, you probably want to separate the items that go on the left and right of the header.
+
+Just like you did in the `02-flex-header` exercise, you'll be nesting flex containers inside each other.
+
+## Desired outcome
+As with the last example, this one needs to be flexible in the middle, with items pushed to the left and right.
+
+![png](./desired-outcome.png)
+
+![gif](./desired-outcome.gif)
+
+### Self Check
+- Everything is centered vertically inside the header.
+- There is 8px space between everything and the edge of the header.
+- Items are arranged horizontally as seen in the outcome image.
+- There is 16px between each item on both sides of the header.
+- flex is used to arrange everything. */
+
 /* this is some magical font-importing.  
 you'll learn about it later. */
 @import url('https://fonts.googleapis.com/css2?family=Besley:ital,wght@0,400;1,900&display=swap');
@@ -6,20 +28,29 @@ body {
   margin: 0;
   background: #eee;
   font-family: Besley, serif;
+  
 }
 
 .header {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
-}
+  display: flex;
+  justify-content: space-between;
 
+  /* flex:auto; not mentioned*/
+
+  /* border: 8px;the sentence means padding,not border*//* There is 8px space between everything and the edge of the header. */
+
+  padding:8px;/*not 16px,"There is 16px between each item on both sides of the header." means gap*/
+}
 .profile-image {
   background: rebeccapurple;
   box-shadow: inset 2px 2px 4px rgba(0,0,0,.5);
   border-radius: 50%;
   width: 48px;
   height: 48px;
+
 }
 
 .logo {
@@ -35,6 +66,7 @@ button {
   background: rebeccapurple;
   color: white;
   padding: 8px 24px;
+  
 }
 
 a {
@@ -45,4 +77,16 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  gap:16px;/* "There is 16px between each item on both sides of the header." means gap and is not set in header at once ,but individually in ul and .left .right*/
+  margin: 0;/* I miss it making the lists part have no space between logo*/
+  padding: 0;/* I miss it*/
+ 
+
+}
+.left,
+.right{
+display: flex;
+align-items: center;
+gap:16px;/* "There is 16px between each item on both sides of the header." means gap and is not set in header at once ,but individually in ul and .left .right*/
 }
