--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -1,3 +1,23 @@
+/* # A common 'modal' style
+This one is another very common pattern on the web. The solution to this one is _simple_... but it might not be immediately obvious to you. You'll need to edit the HTML a bit to get everything where it needs to be.
+
+### A hint
+Depending on how you approach this one, you might need to revisit the `flex-shrink` property to keep a flex item from getting smashed. In addition, pay attention to the structure of the html, specifically look into adding an additional container surrounding the header, button, main text, cancel, and continue divs; and look into moving the header div to encompass the button as well.
+
+## Desired outcome
+
+![desired outcome](./desired-outcome.png)
+
+### Self Check
+
+- The blue icon is aligned to the left.
+- There is equal space on either side of the icon (the gaps between the icon and the edge of the card, and the icon and the text, are the same).
+- There is padding around the edge of the modal.
+- The header, text, and buttons are aligned with each other.
+- The header is bold and a slightly larger text-size than the text.
+- The close button is vertically aligned with the header, and aligned in the top-right of the card. */
+
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 html, body {
@@ -10,26 +30,6 @@ body {
   background: #aaa;
   color: #333;
   /* I'll give you this one for free lol */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.modal {
-  background: white;
-  width: 480px;
-  border-radius: 10px;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
-}
-
-.icon {
-  color: royalblue;
-  font-size: 26px;
-  font-weight: 700;
-  background: lavender;
-  width: 42px;
-  height: 42px;
-  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -60,6 +60,7 @@ button.continue {
   background: royalblue;
   border: 1px solid royalblue;
   color: white;
+ 
 }
 
 button.cancel {
@@ -67,3 +68,55 @@ button.cancel {
   border: 1px solid #ddd;
   color: royalblue;
 }
+.modal {
+  background: white;
+  width: 480px;
+  border-radius: 10px;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display: flex;
+  padding:8px;
+  gap:8px;
+}
+
+.icon {
+  color: royalblue;
+  font-size: 26px;
+  font-weight: 700;
+  background: lavender;
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  display: flex;
+  
+  align-items: center;
+  justify-content:center;
+  /*??"The blue icon is aligned to the left." margin-left: 0; */
+  flex-shrink: 0;
+  
+}
+/*the solution does not use gap to achieve"There is equal space on either side of the icon (the gaps between the icon and the edge of the card, and the icon and the text, are the same)."*/
+/* THE SOLUTION delete class gap html,with gap:8px in .moral and can work as the same*/
+  /* .gap{
+  display: flex;
+  gap:8px;}
+  .container{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   gap:8px;
+    
+  } 
+   */
+  .text {
+    margin-bottom: 8px;
+  }
+  
+  .header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: bold;
+    font-size:larger;
+    margin-bottom: 8px;/* I don't know */
+  }
+  
