Finish 06flex-layout(details:margin and padding)

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -1,3 +1,20 @@
+/* Hints
+
+    You may want to search something like CSS remove list bullets. We've done this for you in previous examples, but not here. Yay learning.
+    Finding out how to style links in CSS might help you get rid of that pesky underline decoration...
+    We've added height: 100vh to the body... this makes the body exactly the same height as the viewport. To stick the footer to the bottom you will need to use flex and change the direction to column. */
+/* 
+    Self Check
+
+    The header is at the top of the page, the footer is at the bottom, and they stay in place if you resize your screen.
+    The header and footer have padding.
+    The links in the header and footer are pushed to either side.
+    There is space between the links in the header and footer.
+    The footer has a light gray background (#eeeeee).
+    The logo, input and buttons are centered in the screen.
+    The buttons have an appropriate amount of padding.
+    There is space between the logo, input and buttons. */
+
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 body {
@@ -24,4 +41,54 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+/*solution*/
+body{
+  display: flex;
+  flex-direction: column;
+  /* use flex:1 in the body to make the footer on the bottom and header on the top
+  not 
+  justify-content: space-between; */
+}
+.footer,
+.header{
+  display: flex;
+  justify-content: space-between;
+  /* flex:0 0 auto;  not mentioned*/
+  padding:16px;
+}
+.footer{
+  background-color: #eeeeee;
+}
+.content{
+  display: flex;
+  flex:1;
+  /*miss it"The header is at the top of the page, the footer is at the bottom, and they stay in place if you resize your screen."" */
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap:16px;
+}
+button{
+  padding: 8px 16px; /* miss 16px */
+}
+a{
+  text-decoration: none;
+  color: #666;
+}
+/* li{
+  display: flex;
+  list-style: none;
+}
+.left-links,.right-links{
+  display: flex;
+  gap:16px
+} */
+/* use ul instead */
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;/* miss it  */
+  padding: 0;/* miss it */
+  gap: 16px;
 }
